--- a/Total.html
+++ b/Total.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My web</title>
-</header>
+</head>
 <body>
     <header>
         <h1>My web</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="file:///C:/Users/QYT/Desktop/mi349_blog/index.html">Blog</a></li>
+            <li><a href="./index.html">Blog</a></li>
         </ul>
     </nav>
     <nav>
         <ul>
-            <li><a href=file:///C:/Users/QYT/Desktop/mi349_blog/about.html>About</a></li>
+            <li><a href="./about.html">About</a></li>
         </ul>
     </nav>
 </body>
