--- a/about.html
+++ b/about.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-</header>
+</head>
 <body>
-<h1 id="About me" class="section-heading">Introduce</h1>
+<h1 class="section-heading">Introduce</h1>
 
-<p><img src="About.png" alt="About me"</p>
+<p><img src="About.png" alt="About me"/></p>
 
 <p>I am a junior majoring in media and I am very interested in this course. This is because this course can provide a lot of help for my future employment and making web pages is also a very necessary skill in the future.</p> 
-<h2 id="About me">List of Me</h2>
+<h2 id="About-me">List of Me</h2>
 <ul class="Introduce">
     <li>Name: Yutao Qiu</li>
     <li>Age: 20</li>
