--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 <h1 id="Demacia1" class="section-heading">Demacia</h1>
-
 <p><img src="Demacia.png" alt="Demacia background story"/></p>
 
 <p>Hello players. I am a fighter from <em>Demacia</em>.  My main duty is to protect the royal family of Demacia.After I was twelve years old, I became a member of the Pioneer Corps responsible for protecting our country and  <strong>Prince Jarvan IV</strong>After a catastrophe, we fought fierce battles with neighboring Noxus. Before the war, we called up outstanding soldiers in the country such as Galen and Xin Zhao. However, Galen disagreed with Jarvan IV during a war. In this case, Galen took a team of soldiers to chase the retreating Noxian army. He was captured by the Noxian army pretending to retreat. Therefore, the grievances between our country and Noxus continue to deepen. In the end, peace in this territory became a problem of the century.</p> 
@@ -22,6 +21,28 @@
 </ul>
 
     <p><a href="https://leagueoflegends.fandom.com/wiki/Demacia">Demacia</a></p>
-
+<table>
+    <tr>
+        <th>Location</th>
+        <th>Character</th>
+        <th>Event</th>
+    </tr>
+    <tr>
+        <td>Demacia</td>
+        <td>Soldiers in Demacia</td>
+        <td>Protect country</td>
+    </tr>
+    <tr>
+        <td>Noxus</td>
+        <td>Soldiers in Noxus</td>
+        <td>Fight with Demacia</td>
+    </tr>
+</table>
+<form>
+    <label>Sign up for our newsletter:
+        <input type="text">
+    </label>
+    <button>Subscribe</button>
+</form>
 </body>
 </html>
