--- a/Total.html
+++ b/Total.html
@@ -19,4 +19,9 @@
             <li><a href="./about.html">About</a></li>
         </ul>
     </nav>
+    <nav>
+        <ul>
+            <li><a href="./contact.html">contact</a></li>
+        </ul>
+    </nav>
 </body>
