--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
     <meta charset="UTF-8">
@@ -8,11 +8,19 @@
 </head>
 <body>
 <section id="blog">
-<h1 id="Demacia1" class="section-heading">Demacia</h1>
+<h2 id="Demacia1" class="section-heading">Demacia</h2>
 <article class="blog-post">
-<p><img src="Demacia.png" alt="Demacia background story"/></p>
+<div class="story"><img src="Demacia.png" alt="Demacia background story"/>
+
+<span class="story-title">Demacia background story</span>
+</div>
+
+
+<div class="intro">
 
 <p>Hello players. I am a fighter from <em>Demacia</em>.  My main duty is to protect the royal family of Demacia.After I was twelve years old, I became a member of the Pioneer Corps responsible for protecting our country and  <strong>Prince Jarvan IV</strong>After a catastrophe, we fought fierce battles with neighboring Noxus. Before the war, we called up outstanding soldiers in the country such as Galen and Xin Zhao. However, Galen disagreed with Jarvan IV during a war. In this case, Galen took a team of soldiers to chase the retreating Noxian army. He was captured by the Noxian army pretending to retreat. Therefore, the grievances between our country and Noxus continue to deepen. In the end, peace in this territory became a problem of the century.</p> 
+</div>
+
 </article>
 <h2>Demacia and Noxus</h2>
 <p>We suspect that Xin Zhao is a spy sent by Noxus to our country. He holds the most important military power in his hands. In this case, Noxus is likely to use him to overthrow our country. Although I am only a soldier, I have the will to defend the entire country. So I reminded our King Jarvan III on different occasions and let him know the purpose of Xin Zhao. In the end, we snatched back the power that belonged to us from Xin Zhao to safeguard our country.</p>
@@ -30,14 +38,14 @@
         <th>Event</th>
     </tr>
     <tr>
-        <td>Demacia</td>
-        <td>Soldiers in Demacia</td>
-        <td>Protect country</td>
+        <td class="one">Demacia</td>
+        <td class="two">Soldiers in Demacia</td>
+        <td class="three">Protect country</td>
     </tr>
     <tr>
-        <td>Noxus</td>
-        <td>Soldiers in Noxus</td>
-        <td>Fight with Demacia</td>
+        <td class="one">Noxus</td>
+        <td class="two">Soldiers in Noxus</td>
+        <td class="three">Fight with Demacia</td>
     </tr>
 </table>
 <form>
